--- a/AndBible/res/values-hi/strings.xml
+++ b/AndBible/res/values-hi/strings.xml
@@ -4,9 +4,9 @@
   <!--Startup & Help-->
   <string name="splash_top_text">\nतब परमेश्वर ने कहा, “उजियाला हो” और उजियाला हो गया।\nउत्पत्ति 1:3</string>
   <string name="help_text">अगले या पिछले अध्याय के लिए स्क्रीन पर उंगली से बाएं/दाहिने जाओ⏎ ⏎ अन्य कार्य के लिये \'मेनू\' दबाएँ</string>
-  <string name="help_text_long"><b>Navigation</b>\nGo to the next or previous chapter by using the track-ball, D-pad or swiping the screen with your finger\n    \nDouble-tap toggles Fullscreen on/off.\n    \n\n<b>Menu</b>\n    \nPress the MENU key for actions\n    \n\nTo download more documents press Menu/More/Download Documents\n    \n\n<b>Speech</b>\nPress Speak to access a dialog to start or stop reading\n    \n\n<b>My Note</b>\nNotes can be added via the My Note menu item on the verse context menu.  The list of existing notes can be accessed via the main menu.\n    \n\n<b>Bookmarks</b>\nBookmarks can be added via the verse context menu.  The Bookmark Manager is accessed via the main menu.  The Bookmark Manager context menu allows bookmarks to be grouped using labels.\n    \n\n<b>Search</b>\nSearch text can include special characters like *, ?, AND, OR, NOT (see \"Apache Lucene - Query Parser Syntax\" for more details)\n    \n\n<b>Context Menus</b>\n    \nLong press on the bible view to open the context menu for actions affecting the current verse.\n    \nLong press on a document in the document selector to delete it or view information.\n    \nLong press the Back button to access the History list\n    </string>
+  <string name="help_text_long"><b>नेविगेशन</b>\nअगले या पिछले अध्याय के लिए स्क्रीन पर उंगली से बाएं/दाहिने जाओ।    \n\'फुल-स्क्रीन\' के लिये \'डबल-टैप\' कीजिए।\n   \n\n<b>मेनू</b>\nअध्ययन/कार्य के लिये \'मेनू\' दबाएँ।    \n    \nअन्य किताबें/बाइबिल के लिए: मेनू&gt;और&gt;\'अन्य किताबें डाउनलोड करें\'।\n\n<b>\'संदर्भ मेनू\'</b>\n    \nवर्तमान छंद संबंधित कार्य - छंद या वाक्य, लंबे समय तक दबाएँ।\n\nकिताब संबंधित - मेनू&gt;किताबें, फिर किताब के नाम पर लंबे समय तक दबाएँ।    \n\nअध्ययन-इतिहास संबंधित - \'बैक बटन\', लंबे समय तक दबाएँ। \n\n    \n<b>अध्याय सुनिए</b>\nअध्याय सुनिए - एक या अधिक अध्याय जोर से सुनिए (+ विराम, दोहराना)।\n    \n\n<b>मेरे टिप्पणीयां</b>\nटिप्पणी लिखने के लिए, छंद की \'संदर्भ मेनू\' चुनिए। \nटिप्पणी सूची के लिए मुख्य \'मेनू\' दबाएँ।\n    \n\n<b>पुस्तक-चिन्ह</b>\nपुस्तक-चिन्ह जोड़ने के लिए, छंद की \'संदर्भ मेनू\' चुनिए। \n\'पुस्तक-चिन्ह मैनेजर\' के लिए मुख्य \'मेनू\' दबाएँ। पुस्तक-चिन्ह वर्गीकृत करने के लिए \'लेबल\' का उपयोग करें (\'पुस्तक-चिन्ह मैनेजर\' के \'संदर्भ मेनू\' में)।  \n\n\n<b>खोज</b>\nखोज शब्दों में आप यह अक्षर भी शामिल कर सकते हैं: *, ?, AND, OR, NOT (अधिक विवरण के लिए \"Apache Lucene - Query Parser Syntax\" गूगल में ढूंढ़ना)।</string>
   <string name="version_text">संस्करण %s</string>
-  <string name="no_sdcard_error">एक एस-डी कार्ड डालें और बाइबिल फिर से शुरू करे.</string>
+  <string name="no_sdcard_error">एक एस-डी कार्ड डालें और बाइबिल फिर से शुरू करें ।</string>
   <!--main menu-->
   <string name="chooseBook">किताबें</string>
   <string name="selectPassage">पुस्तक/अध्याय</string>
@@ -21,22 +21,24 @@
   <string name="choosePassageVerseName">छंद चुनें</string>
   <!--Search-->
   <string name="search_index">खोज सूचकांक</string>
-  <string name="index">सूची</string>
+  <string name="index_creation_required">खोज के लिए सूचकांक की जरूरत है।\n\nकृपया सूचकांक इंटरनेट से डाउनलोड करें (तेज प्रक्रिया), \nया नई सूचकांक बनाऐं (धीमी प्रक्रिया, कम सुविधाओं)।</string>
+  <string name="indexing_wait_msg">खोज-सूचकांक पूरा होने के बाद आपको खोज-स्क्रीन में ले जाया जाएगा</string>
+  <string name="index">सूचकांक</string>
   <string name="index_download">डाउनलोड</string>
-  <string name="index_not_available_for_download">यह सूची डाउनलोड करने के लिए उपलब्ध नहीं है</string>
-  <string name="index_create">बनाना</string>
+  <string name="index_not_available_for_download">यह सूचकांक डाउनलोड करने के लिए उपलब्ध नहीं है</string>
+  <string name="index_create">नई सूचकांक बनाऐं </string>
   <!--Tasks-->
   <string name="progress_status">प्रगति</string>
-  <string name="task_kill_warning">अगर आप आन्ड बाइबिल को छोड़ जाऐं, तो लंबे कार्य समाप्त होने की संभावना है</string>
+  <string name="task_kill_warning">अगर आप आन्ड बाइबिल को छोड़ जाऐं, तो लंबे कार्य अंत होने की संभावना है</string>
   <string name="no_tasks_running">कोई कार्य इस समय क्रियान्वित नही</string>
   <!--Search-->
-  <string name="search_results">परिणाम</string>
+  <string name="search_results">खोज परिणाम</string>
   <string name="search_words_group_prompt">छंद खोज</string>
   <string name="search_all_words">सभी शब्द</string>
   <string name="search_any_word">कोई भी शब्द</string>
   <string name="search_phrase">सभी शब्द, क्रम में</string>
   <string name="search_result_count">%d परिणाम मिला</string>
-  <string name="search_showing_first">बहुत सारे परिणाम, पहले के %d</string>
+  <string name="search_showing_first">बहुत सारे खोज परिणाम, पहले के %d</string>
   <string name="search_bible_section_group_prompt">खोज सीमा</string>
   <string name="search_all_bible">﻿﻿﻿संपूर्ण बाइबल</string>
   <string name="search_new_testament">नया नियम</string>
@@ -48,8 +50,8 @@
   <string name="prefs_show_verseno_summary">छंद संख्या दिखाना</string>
   <string name="prefs_verse_per_line_title">हर छंद, नई पंक्ति में</string>
   <string name="prefs_verse_per_line_summary">हर एक छंद, नई पंक्ति में पढ़िये</string>
-  <string name="prefs_show_bookmarks_title">पुस्तक चिन्ह-चित्र दिखाना</string>
-  <string name="prefs_show_bookmarks_summary">आपकी इकट्ठा की छंद में चित्र दिखाना</string>
+  <string name="prefs_show_bookmarks_title">पुस्तक-चिन्ह-चित्र दिखाना</string>
+  <string name="prefs_show_bookmarks_summary">आपकी इकट्ठा की पुस्तक-चिन्ह छंद में चित्र दिखाना</string>
   <string name="prefs_show_mynotes_title">मेरे टिप्पणी-चित्र दिखाना</string>
   <string name="prefs_show_mynotes_summary">मेरे टिप्पणी वाले छंद में चित्र दिखाना</string>
   <string name="prefs_show_notes_title">पाद टिप्पणी और संबंधित संदर्भ</string>
@@ -62,8 +64,8 @@
   <string name="prefs_section_title_summary">तमाम खंड शीर्षक (टाइटिल) दिखाना</string>
   <string name="prefs_red_letter_title">लाल अक्षर</string>
   <string name="prefs_red_letter_summary">यीशु मसीह के शब्द, लाल रंग में</string>
-  <string name="prefs_tilt_to_scroll_title">नीचे के पृष्ठ के लिए फ़ोन झुकना</string>
-  <string name="prefs_tilt_to_scroll_summary">फ़ोन झुकना - नीचे के पृष्ठ देखें</string>
+  <string name="prefs_tilt_to_scroll_title">अगले पृष्ठ के लिए फ़ोन झुकना</string>
+  <string name="prefs_tilt_to_scroll_summary">फ़ोन झुकना - अगला पृष्ठ देखें</string>
   <string name="prefs_night_mode_title">अंधेरे में पढ़िये</string>
   <string name="prefs_night_mode_summary">अंधेरे में पढ़ने के लिए</string>
   <string name="prefs_night_mode_automatic">ऑटोमैटिक</string>
@@ -83,7 +85,7 @@
   <!--Strongs-->
   <string name="strongs">\"र्स्टो्न्ग\" शब्दकोश</string>
   <string name="strongs_not_installed">\"र्स्टो्न्ग\" की हिब्रू और यूनानी शब्दकोश डाउनलोड करें</string>
-  <string name="all_greek_occurrences">खोज - सभी घटना</string>
+  <string name="all_greek_occurrences">सभी घटना खोजें</string>
   <string name="all_hebrew_occurrences">सभी मिसाल खोजें</string>
   <string name="no_indexed_bible_with_strongs_ref">\"र्स्टो्न्ग\" संख्या वाले बाइबिल डाउनलोड करें, फिर खोज सूचकांक डाउनलोड करें</string>
   <string name="morph_robinson_not_installed">\'Robinson\'s Morphological Analysis Codes\' शब्दकोश, डाउनलोड करें</string>
@@ -99,10 +101,10 @@
   <string name="error_downloading">डाउनलोड में त्रुटि. इंटरनेट चेक करें</string>
   <string name="no_internet_connection">इंटरनेट उपलब्ध नहीं</string>
   <string name="storage_space_warning">किताब के लिए जगह कम है</string>
-  <string name="wait_for_bible">कृपया प्रतीक्षा करें, बाइबिल डाउनलोड \nहोने के बाद पहला स्क्रीन दिखाई देगा</string>
+  <string name="wait_for_bible">कृपया प्रतीक्षा करें, बाइबिल डाउनलोड \nहोने के बाद मुख्य स्क्रीन दिखाई देगा ।\n\nअगले किताबें/बाइबिल के लिए: मेनू&gt;और&gt;\'अन्य किताबें डाउनलोड करें\'।</string>
   <string name="wait_for_bible_not_yet">कृपया प्रतीक्षा करें,\nबाइबिल डाउनलोड हो रहा है</string>
   <string name="download_complete_no_bibles">कोई बाइबिल उपलब्ध नहीं, कृपया \'बैक बटन\' दबाएँ</string>
-  <string name="too_many_jobs">कई कार्य क्रियान्वित.  कृपया प्रतीक्षा करें</string>
+  <string name="too_many_jobs">कई कार्य क्रियान्वित।  कृपया प्रतीक्षा करें।</string>
   <string name="document_not_installed">कृपया डाउनलोड करें \'%s\'</string>
   <!--Daily Reading Plan-->
   <string name="rdg_plan_title">पठन-योजना</string>
@@ -115,7 +117,7 @@
   <string name="rdg_plan_y1ot1nt1_chronological">बाइबिल एक वर्ष में: कालक्रम के अनुसार</string>
   <string name="rdg_plan_y1ot1nt1_OTandNT">बाइबिल एक वर्ष में: पुराना और नया नियम</string>
   <string name="rdg_plan_y1ot1nt1_OTthenNT">बाइबिल एक वर्ष में: पुराना नियम,फिर नया नियम</string>
-  <string name="rdg_plan_y1ot1nt2_mcheyne"> (M\'Cheyne)</string>
+  <string name="rdg_plan_y1ot1nt2_mcheyne">बाइबिल एक वर्ष में (M\'Cheyne)</string>
   <!--string name="rdg_plan_m1gospels">Through the Gospels in a month</string-->
   <!--Document context menu-->
   <string name="delete">मिटाओ</string>
@@ -132,11 +134,11 @@
   <string name="share_verse_subject">एक पवित्र वाक्य आपके लिए, आन्ड बाइबिल (AndBible) के जरीए</string>
   <string name="compare_translations">अन्य अनुवादों से तुलना</string>
   <!--Bookmarks-->
-  <string name="bookmarks">पुस्तक चिन्ह</string>
-  <string name="add_bookmark">पुस्तक चिन्ह लगाओ</string>
-  <string name="bookmark_added">पुस्तक चिन्ह लग गया</string>
-  <string name="bookmark_exists">यह पुस्तक चिन्ह, पहले से ही मौजूद</string>
-  <string name="bookmark_labels">पुस्तक चिन्ह  के नाम</string>
+  <string name="bookmarks">पुस्तक-चिन्ह</string>
+  <string name="add_bookmark">पुस्तक-चिन्ह लगाओ</string>
+  <string name="bookmark_added">पुस्तक-चिन्ह लग गया</string>
+  <string name="bookmark_exists">यह पुस्तक-चिन्ह, पहले से ही मौजूद</string>
+  <string name="bookmark_labels">पुस्तक-चिन्ह  लेबल (नाम)</string>
   <string name="assign_labels">लेबल लिखना/देना</string>
   <string name="new_label">नया लेबल</string>
   <string name="new_label_prompt">नाम</string>
@@ -177,10 +179,10 @@
   <string name="mynote_saved">टिप्पणी सुरक्षित </string>
   <!--Backup and restore-->
   <string name="backup">बैकअप</string>
-  <string name="backup_success">टिप्पणी / पुस्तक चिन्ह, एस-डी कार्ड में यहां सुरक्षित: %s </string>
+  <string name="backup_success">टिप्पणी / पुस्तक-चिन्ह, एस-डी कार्ड में यहां सुरक्षित: %s </string>
   <string name="restore">बैकअप से नवीकरण</string>
   <string name="restore_confirmation">बैकअप से मेरे टिप्पणी/पुस्तक-चिन्ह लिखना ?</string>
-  <string name="restore_success">टिप्पणी / पुस्तक चिन्ह लिए, एस-डी कार्ड से: %s </string>
+  <string name="restore_success">टिप्पणी / पुस्तक-चिन्ह लिए, एस-डी कार्ड से: %s </string>
   <!--Document types-->
   <string name="doc_type_bible">बाइबिल</string>
   <string name="doc_type_commentary">कमेंटरी</string>
