--- a/AndBible/res/values/strings.xml
+++ b/AndBible/res/values/strings.xml
@@ -101,7 +101,10 @@ TODO: error and download_document_confirm_prefix need to be parameterized rather
     <string name="prefs_text_size_title">Text size</string>
     <string name="prefs_text_size_summary">See more or see more clearly</string>
     <string name="prefs_text_size_sample_text">Sample text</string>
-	<string name="prefs_interface_locale_title">Application language</string>
+	<string name="prefs_screen_timeout_title">Sleep</string>
+    <string name="prefs_screen_timeout_summary">Idle time before screen turns off</string>
+    <string name="x_minutes">%d minutes</string>
+    <string name="prefs_interface_locale_title">Application language</string>
     <string name="prefs_interface_locale_summary">Select custom user interface language</string>
     <string name="locale_change_warning">Application will be restarted to switch to the new interface language</string>
 
@@ -244,6 +247,7 @@ TODO: error and download_document_confirm_prefix need to be parameterized rather
     <string name="retry">Try Again</string>
     <string name="please_wait">Please wait...</string>
     <string name="all">All</string>
+    <string name="default_value">@string/lang_default</string>
     
     <!-- Errors -->
     <string name="error_occurred">An error has occurred</string>
